--- a/package.json
+++ b/package.json
@@ -6,18 +6,24 @@
     "classnames": "^2.2.5",
     "gsap": "^1.20.4",
     "material-ui": "^0.20.0",
-    "omdb": "https://github.com/Belle-Epoque/omdb.git",
+    "omdb": "git+https://github.com/Belle-Epoque/omdb.git",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-helmet": "^5.2.0",
+    "react-infinite-scroller": "^1.1.3",
     "react-motion": "^0.5.2",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
+    "react-snapshot": "^1.3.0",
     "react-transition-group": "^2.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && react-snapshot",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "xml2js": "^0.4.19"
   }
 }
