--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-motion": "^0.5.2",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
-    "react-transition-group": "^2.2.1"
+    "react-transition-group": "^2.2.1",
+    "uniqid": "^4.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
