--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "classnames": "^2.2.5",
     "gsap": "^1.20.4",
     "material-ui": "^0.20.0",
-    "omdb": "https://github.com/Belle-Epoque/omdb.git",
+    "omdb": "git+https://github.com/Belle-Epoque/omdb.git",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-infinite-scroller": "^1.1.3",
+    "react-js-pagination": "^3.0.1",
     "react-motion": "^0.5.2",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
