--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
     "classnames": "^2.2.5",
     "gsap": "^1.20.4",
     "material-ui": "^0.20.0",
+    "material-ui-search-bar": "^0.4.1",
     "omdb": "https://github.com/Belle-Epoque/omdb.git",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-motion": "^0.5.2",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
-    "react-transition-group": "^2.2.1"
+    "react-transition-group": "^2.2.1",
+    "searchkit": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
