--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "material-ui": "^0.20.0",
     "omdb": "https://github.com/Belle-Epoque/omdb.git",
     "react": "^16.2.0",
+    "react-bootstrap": "^0.32.1",
     "react-dom": "^16.2.0",
     "react-motion": "^0.5.2",
     "react-router-dom": "^4.2.2",
